--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ build:
       - echo Build started on `date`
       - printenv
       - aws s3 cp s3://amplify-amplifyf939554362c04-staging-145037-deployment/environments/ src/ --recursive
-      - docker build -t Hardware-site --build-arg IMAGE_TAG=$IMAGE_TAG .
+      - docker build -t Hardware-Store --build-arg IMAGE_TAG=$IMAGE_TAG .
       - docker images -a
       - echo Building the Docker image...
       - docker tag $APP_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.eu-west-1.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
